[package]
name = "server"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix]
version = "0.10.0"
default-features = false
features = []

[dependencies.actix-web]
version = "3.3.2"
default-features = false
features = [ "compress" ]

[dependencies.actix-web-actors]
version = "3.0.0"
default-features = false
features = []
